# fractal

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  Doxyfile  LICENSE  README.md  azure-pipelines.yaml  check_clang_format.py  check_clang_tidy.py  format_all.py  fractal.sln  imports.targets  install_libs.py  package.py
.circleci/: config.yml
doc/master/: _r_e_a_d_m_e_8md.html  annotated.html  bind__front_8h.html  bind__front_8h__incl.map  bind__front_8h__incl.md5  bind__front_8h_source.html  classes.html  dir_2993051f07ff2cebc55eadc6068be547.html  doxygen.css  encoder_8cpp.html  encoder_8cpp__incl.map  encoder_8cpp__incl.md5  encoder_8cpp_source.html  encoder_8h.html  encoder_8h__dep__incl.map  encoder_8h__dep__incl.md5  encoder_8h__incl.map  encoder_8h__incl.md5  encoder_8h_source.html  files.html  full__quad_8cpp.html  full__quad_8cpp__incl.map  full__quad_8cpp__incl.md5  full__quad_8cpp_source.html  full__quad_8h.html  full__quad_8h__dep__incl.map  full__quad_8h__dep__incl.md5  full__quad_8h__incl.map  full__quad_8h__incl.md5  full__quad_8h_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  gl__object_8h.html  gl__object_8h__dep__incl.map  gl__object_8h__dep__incl.md5  gl__object_8h__incl.map  gl__object_8h__incl.md5  gl__object_8h_source.html  (+289 more)
doc/master/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  (+37 more)
fractal/: CMakeLists.txt  bind_front.h  bind_front.inl  encoder.cpp  encoder.h  fractal.vcxproj  full_quad.cpp  full_quad.h  gl_object.cpp  gl_object.h  gl_object.inl  glfw_handle.cpp  glfw_handle.h  glfw_window.cpp  glfw_window.h  main.cpp  main_window.cpp  main_window.h  mandelbrot.cpp  mandelbrot.h  palette.cpp  palette.h  quad.cpp  quad.h  render_video.cpp  render_video.h  scope_exit.cpp  scope_exit.h  scope_exit.test.cpp  settings.cpp  settings.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_stream.cpp  texture_stream.h  thread_pool.cpp  thread_pool.h  thread_pool.test.cpp
glad/: CMakeLists.txt  CMakeLists.txt.in  glad.cxx  glad.h  glad.vcxproj  khrplatform.h
glad/include/glad/: glfw.h
vcpkg_config/ports/doctest/: CONTROL
vcpkg_config/ports/glad/: CONTROL  portfile.cmake
vcpkg_config/ports/tinyfiledialogs/: CONTROL
vcpkg_config/ports/x265/: CONTROL  disable-install-pdb.patch  portfile.cmake
